# Storagex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.sh
data/: app-settings.json  shares.json
data/share-artifacts/gAGbbhs_L78wCTJ7xesTU0TGNZEbWpi_/: hello.txt
data/share-artifacts/vAboZMMQConWL4tpkV81pW8h1Bjjogvp/: hello.txt
docs/: codec-benchmarks.md  local-state.md  release-smoke-test.md
scripts/: benchmark_codec.py
server/: app.py  app_settings.py  file_utils.py  library_index.py  quick_tunnel.py  share_store.py  youtube.py
server/codec/: __init__.py  constants.py  format.py  keyed.py  service.py  video.py
static/: app.js  index.html  share.css  share.html  share.js  styles.css
tests/: conftest.py  test_app.py  test_codec.py  test_library_index.py  test_youtube.py
